--- a/README.adoc
+++ b/README.adoc
@@ -1,27 +1,36 @@
-# IsoIcs
+= IsoIcs
 
 IsoIcs is International Classification for Standards codes reference.
 
-## Installation
+== Installation
 
 Add this line to your application's Gemfile:
 
-```ruby
+[source,ruby]
+----
 gem 'isoics'
-```
+----
 
 And then execute:
 
-    $ bundle
+[source]
+----
+$ bundle
+----
 
 Or install it yourself as:
 
-    $ gem install isoics
+[source]
+----
+$ gem install isoics
+----
 
-## Usage
+== Usage
 
 Fetching ICS data:
-```ruby
+
+[source,ruby]
+----
 # Fetch field
 ics = Isoics.fetch fieldcode: "01"
 ics.code        # => "01"
@@ -43,18 +52,18 @@ ics.subgroupcode # => "30"
 note = ics.notes.first
 note.text        # => "Technical product documentation, see {ics-code}"
 note.ics_code    # => "01.140.30"
-```
+----
 
-## Development
+== Development
 
 After checking out the repo, run `bin/setup` to install dependencies. Then, run `rake spec` to run the tests. You can also run `bin/console` for an interactive prompt that will allow you to experiment.
 
 To install this gem onto your local machine, run `bundle exec rake install`. To release a new version, update the version number in `version.rb`, and then run `bundle exec rake release`, which will create a git tag for the version, push git commits and tags, and push the `.gem` file to [rubygems.org](https://rubygems.org).
 
-## Contributing
+== Contributing
 
 Bug reports and pull requests are welcome on GitHub at https://github.com/riboseinc/isoics.
 
-## License
+== License
 
 The gem is available as open source under the terms of the [MIT License](https://opensource.org/licenses/MIT).
