--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,10 @@
 = IsoIcs
 
-IsoIcs is International Classification for Standards codes reference.
+image:https://img.shields.io/gem/v/isoics.svg["Gem Version", link="https://rubygems.org/gems/isoics"]
+image:https://img.shields.io/travis/riboseinc/isoics/master.svg["Build Status", link="https://travis-ci.org/riboseinc/isoics"]
+image:https://codeclimate.com/github/riboseinc/isoics/badges/gpa.svg["Code Climate", link="https://codeclimate.com/github/riboseinc/isoics"]
+
+IsoIcs is the https://en.wikipedia.org/wiki/International_Classification_for_Standards[International Classification for Standards] codes reference. This gem returns the text and description for a given ICS code.
 
 == Installation
 
