--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,11 @@
 = IsoIcs
 
 image:https://img.shields.io/gem/v/isoics.svg["Gem Version", link="https://rubygems.org/gems/isoics"]
-image:https://img.shields.io/travis/metanorma/isoics/master.svg["Build Status", link="https://travis-ci.com/metanorma/isoics"]
+image:https://travis-ci.com/metanorma/isoics.svg["Build Status", link="https://travis-ci.com/metanorma/isoics"]
+image:https://ci.appveyor.com/api/projects/status/kuyrgllpwv0to10k?svg=true["Appveyor Build Status", link="https://ci.appveyor.com/project/metanorma/isoics"]
 image:https://codeclimate.com/github/metanorma/isoics/badges/gpa.svg["Code Climate", link="https://codeclimate.com/github/metanorma/isoics"]
+image:https://img.shields.io/github/issues-pr-raw/metanorma/isoics.svg["Pull Requests", link="https://github.com/metanorma/isoics/pulls"]
+image:https://img.shields.io/github/commits-since/metanorma/isoics/latest.svg["Commits since latest",link="https://github.com/metanorma/isoics/releases"]
 
 IsoIcs is the https://en.wikipedia.org/wiki/International_Classification_for_Standards[International Classification for Standards] codes reference. This gem returns the text and description for a given ICS code.
 
